// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu renders Menu with Divider correctly 1`] = `
<ul
  class="ui-menu ui-menu-dark ui-menu-inline"
  role="menu"
>
  <li
    class="ui-menu-item"
    role="menuitem"
    style="padding-left:24px"
  >
    投保单复核
  </li>
  <li
    class="ui-menu-item"
    role="menuitem"
    style="padding-left:24px"
  >
    在线投保单管理
  </li>
  <li
    class="ui-menu-item-divider"
  />
  <li
    class="ui-menu-item"
    role="menuitem"
    style="padding-left:24px"
  >
    投保单录入
  </li>
  <li
    class="ui-menu-item"
    role="menuitem"
    style="padding-left:24px"
  >
    新增计划
  </li>
</ul>
`;

exports[`Menu renders collpased Menu correctly 1`] = `
<ul
  class="ui-menu ui-menu-light ui-menu-inline ui-menu-collapsed"
  role="menu"
>
  <li
    class="ui-menu-item"
    role="menuitem"
    style="padding-left:24px"
  >
    投保单复核
  </li>
  <li
    class="ui-menu-item"
    role="menuitem"
    style="padding-left:24px"
  >
    在线投保单管理
  </li>
  <li
    class="ui-menu-item-divider"
  />
  <li
    class="ui-menu-item"
    role="menuitem"
    style="padding-left:24px"
  >
    投保单录入
  </li>
  <li
    class="ui-menu-item"
    role="menuitem"
    style="padding-left:24px"
  >
    新增计划
  </li>
</ul>
`;

exports[`Menu renders dark Menu correctly 1`] = `
<ul
  class="ui-menu ui-menu-dark ui-menu-inline"
  role="menu"
>
  <li
    class="ui-menu-submenu"
  >
    <div
      class="ui-menu-submenu-title"
      style="padding-left:24px"
    >
      新契约
      <i
        class="ui-menu-submenu-arrow"
      />
    </div>
    <ul
      class="ui-menu-submenu-sub"
      style="display:block"
    >
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单复核
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        在线投保单管理
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单录入
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        新增计划
      </li>
    </ul>
  </li>
  <li
    class="ui-menu-submenu"
  >
    <div
      class="ui-menu-submenu-title"
      style="padding-left:24px"
    >
      核保
      <i
        class="ui-menu-submenu-arrow"
      />
    </div>
    <ul
      class="ui-menu-submenu-sub"
      style="display:block"
    >
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        核保权限定义
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        核保权限分配
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        规则配置
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        人工核保
      </li>
    </ul>
  </li>
  <li
    class="ui-menu-submenu"
  >
    <div
      class="ui-menu-submenu-title"
      style="padding-left:24px"
    >
      批改
      <i
        class="ui-menu-submenu-arrow"
      />
    </div>
    <ul
      class="ui-menu-submenu-sub"
      style="display:block"
    >
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        批改新增
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        批改复核
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        批改回退
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        批改共享池
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Menu renders horizontal Menu correctly 1`] = `
<ul
  class="ui-menu ui-menu-light ui-menu-horizontal"
  role="menu"
>
  <li
    class="ui-menu-item active"
    role="menuitem"
  >
    意健险
  </li>
  <li
    class="ui-menu-item"
    role="menuitem"
  >
    健康险个险
  </li>
  <li
    class="ui-menu-item"
    role="menuitem"
  >
    雇主责任险
  </li>
  <li
    class="ui-menu-item"
    role="menuitem"
  >
    运营后台管理
  </li>
  <li
    class="ui-menu-item"
    role="menuitem"
  >
    公共功能
  </li>
  <li
    class="ui-menu-item"
    role="menuitem"
  >
    询报价
  </li>
</ul>
`;

exports[`Menu renders inline Menu with SubMenu correctly 1`] = `
<ul
  class="ui-menu ui-menu-light ui-menu-inline"
  role="menu"
>
  <li
    class="ui-menu-submenu"
  >
    <div
      class="ui-menu-submenu-title"
      style="padding-left:24px"
    >
      新契约
      <i
        class="ui-menu-submenu-arrow"
      />
    </div>
    <ul
      class="ui-menu-submenu-sub"
      style="display:block"
    >
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单复核
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        在线投保单管理
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单录入
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        新增计划
      </li>
    </ul>
  </li>
  <li
    class="ui-menu-submenu"
  >
    <div
      class="ui-menu-submenu-title"
      style="padding-left:24px"
    >
      核保
      <i
        class="ui-menu-submenu-arrow"
      />
    </div>
    <ul
      class="ui-menu-submenu-sub"
      style="display:block"
    >
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        核保权限定义
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        核保权限分配
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        规则配置
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        人工核保
      </li>
    </ul>
  </li>
  <li
    class="ui-menu-submenu"
  >
    <div
      class="ui-menu-submenu-title"
      style="padding-left:24px"
    >
      批改
      <i
        class="ui-menu-submenu-arrow"
      />
    </div>
    <ul
      class="ui-menu-submenu-sub"
      style="display:block"
    >
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        批改新增
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        批改复核
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        批改回退
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        批改共享池
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Menu renders nested SubMenus correctly 1`] = `
<ul
  class="ui-menu ui-menu-light ui-menu-inline"
  role="menu"
>
  <li
    class="ui-menu-submenu"
  >
    <div
      class="ui-menu-submenu-title"
      style="padding-left:24px"
    >
      理赔
      <i
        class="ui-menu-submenu-arrow"
      />
    </div>
    <ul
      class="ui-menu-submenu-sub"
      style="display:block"
    >
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        报案
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        任务分配
      </li>
      <li
        class="ui-menu-submenu"
      >
        <div
          class="ui-menu-submenu-title"
          style="padding-left:48px"
        >
          理赔工作流
          <i
            class="ui-menu-submenu-arrow"
          />
        </div>
        <ul
          class="ui-menu-submenu-sub"
          style="display:block"
        >
          <li
            class="ui-menu-item"
            role="menuitem"
            style="padding-left:72px"
          >
            休假维护
          </li>
          <li
            class="ui-menu-item"
            role="menuitem"
            style="padding-left:72px"
          >
            时效维护
          </li>
        </ul>
      </li>
    </ul>
  </li>
  <li
    class="ui-menu-submenu"
  >
    <div
      class="ui-menu-submenu-title"
      style="padding-left:24px"
    >
      新契约
      <i
        class="ui-menu-submenu-arrow"
      />
    </div>
    <ul
      class="ui-menu-submenu-sub"
      style="display:block"
    >
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单复核
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        在线投保单管理
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单录入
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        新增计划
      </li>
    </ul>
  </li>
  <li
    class="ui-menu-submenu"
  >
    <div
      class="ui-menu-submenu-title"
      style="padding-left:24px"
    >
      核保
      <i
        class="ui-menu-submenu-arrow"
      />
    </div>
    <ul
      class="ui-menu-submenu-sub"
      style="display:block"
    >
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        核保权限定义
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        核保权限分配
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        规则配置
      </li>
      <li
        class="ui-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        人工核保
      </li>
    </ul>
  </li>
</ul>
`;
